librechart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: digitalocean-issuer
    ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/whitelist-source-range: 0.0.0.0
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
  name: librechat
spec:
  rules:
  - host: chatgpt.test.l7informatics.com
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 3080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - chatgpt.test.l7informatics.com
    secretName: chatgpt-l7informatics-com
